[package]
name = "dcap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
hex          	= { version = "0.4" }
x509-parser  	= { version = "0.15.1" }
serde        	= { version = "1.0", features = ["derive"] }
serde_json   	= { version = "1.0" }
chrono       	= { version = "0.4" }
time         	= { version = "0.3.36" }

p256         	= { version = "0.13.2" }
sha2         	= { version = "0.10.8" }
sha3         	= { version = "0.10.8" }
alloy-sol-types = { version = "0.8.12" }

[features]
default = []
