[package]
name = "dcap-rs"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "Intel Data Center Attestation Primitives (DCAP) Quote Verification Library (QVL) implemented in pure Rust."
repository = "https://github.com/automata-network/dcap-rs"
keywords = ["dcap", "intel", "quote", "attestation", "sgx", "rust", "library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
hex          	= { version = "0.4" }
x509-parser  	= { version = "0.15.1" }
serde        	= { version = "1.0", features = ["derive"] }
serde_json   	= { version = "1.0" }
chrono       	= { version = "0.4" }
time         	= { version = "0.3.36" }

p256         	= { version = "0.13.2" }
sha2         	= { version = "0.10.8" }
sha3         	= { version = "0.10.8" }
alloy-sol-types = { version = "=0.8.12" }
alloy-primitives = { version = "=0.8.12" }
alloy-sol-macro = { version = "=0.8.12" }
alloy-sol-macro-expander = { version = "=0.8.12" }
alloy-sol-macro-input = { version = "=0.8.12" }
syn-solidity = { version = "=0.8.12"}

[features]
default = []

[patch.crates-io]
proc-macro-error2 = { git = "https://github.com/udsamani/proc-macro-error-2", branch = "master"}
