[package]
name = "dcap-rs"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "Intel Data Center Attestation Primitives (DCAP) Quote Verification Library (QVL) implemented in pure Rust."
repository = "https://github.com/automata-network/dcap-rs"
keywords = ["dcap", "intel", "quote", "attestation", "sgx", "rust", "library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
hex          	= { version = "0.4.3", features = ["serde"]}
anyhow          = { version = "1.0.76" }
x509-cert    	= { version = "0.2.5" }
asn1            = { version = "0.17.0" }
serde        	= { version = "1.0", features = ["derive"] }
serde_json   	= { version = "1.0.125", features = ["raw_value"] }
chrono       	= { version = "0.4.38", features = ["serde"]}
time         	= { version = "0.3.36" }
zerocopy        = { version = "0.7.34", features = ["derive"]}

pem          	= { version = "3.0.4" }
base64ct      	= { version = "=1.6.0" }
p256         	= { version = "0.13.2" }
sha2         	= { version = "0.10.8" }
sha3         	= { version = "0.10.8" }
boring-signal = { git = "https://github.com/signalapp/boring", tag = "signal-v4.13.0", package = "boring", default-features = false }

[dependencies.x509-verify]
version = "0.4.6"
default-features = false
features = [ "std", "p256", "x509" ]

[features]
default = []
